minor css changes to make sure all the buttons and texts are visible and clickable

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,36 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .cart-btn {
   padding-bottom: 5px;
-  background-color: orange;
   padding: 10px;
+  font-family: "Exo 2";
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  &:hover {
+    background-color: #338790;
+  }
+}
+
+.one {
+  background-color: rgb(55, 148, 35);
+}
+
+.two {
+  background-color: rgba(221, 104, 61, 1);
+}
+
+.cart-box {
+  border: 3px solid black;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  font-family: "Exo 2";
 }
 
 .game-details-container img {
@@ -23,13 +49,12 @@
 
 .game-details-container {
   background-color: rgba(246, 220, 172, 1);
-  /*   margin-top: 50px; */
-
+  margin-top: 80px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   height: 750px;
-  width: 305px;
+  width: 400px;
   align-items: center;
   border-radius: 5px;
 }
@@ -69,6 +94,7 @@ from #root
   gap: 1rem;
   margin: 0;
   padding: 0;
+  margin-top: -100px;
   list-style-type: none;
 }
 
@@ -88,6 +114,18 @@ from #root
   text-align: center;
   height: 350px;
   width: 305px;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.cart-container {
+  background-color: rgba(246, 220, 172, 1);
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: -200px;
+  width: 305px;
+  padding: 5px;
   align-items: center;
   border-radius: 5px;
 }
@@ -435,13 +473,13 @@ footer {
 }
 
 .gameAd-container img {
-  /*  background-color: blueviolet; */
-  grid-area: image;
   height: 200px;
   width: 300px;
   border: 2px solid black;
   border-radius: 5px;
-  margin-top: 3px;
+  margin-top: -10px;
+  box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0), 0 -1px 1px #3f3333,
+    0 1px 0 #423737;
 }
 
 .game-descripton {
@@ -453,19 +491,19 @@ footer {
   /* background-color: aqua; */
   grid-area: buttons;
 }
+.gamead-info {
+  padding: 5px;
+  font-family: "Exo 2";
+  font-weight: 600;
+  font-size: 16px;
+}
 
 .gameAd-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 200px 1fr 20px;
-  grid-template-areas:
-    "image"
-    "text"
-    "buttons";
   background-color: rgba(246, 220, 172, 1);
-  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px;
   text-align: center;
   height: 300px;
   width: 305px;
@@ -473,6 +511,7 @@ footer {
   border-radius: 5px;
   font-size: 20px;
   text-decoration: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 3), 0 -1px 1px #2c2828, 0 1px 0 #fff;
 }
 
 .about-container {
@@ -497,4 +536,44 @@ footer {
 
 .hideme {
   color: rgba(246, 220, 172, 1);
+}
+
+@media screen and (max-width: 391px) {
+  .game-grid {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-decoration: none;
+  }
+
+  .gameAd-container {
+    background-color: rgba(246, 220, 172, 0.91);
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    height: 200px;
+    width: 160px;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 3px;
+    color: black;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 3), 0 -1px 1px #2c2828, 0 1px 0 #fff;
+  }
+
+  .gameAd-container img {
+    grid-area: image;
+    height: 100px;
+    width: 150px;
+    border-radius: 5px;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0), 0 -1px 1px #3f3333,
+      0 1px 0 #423737;
+  }
+
+  .p-two {
+    font-size: 16px;
+  }
 }
